Drum Kit Challenge- based on template v1.1

--- a/index.html
+++ b/index.html
@@ -2,19 +2,41 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Drum example</title>
+    <title>Drum Kit</title>
     <link rel="stylesheet" href="style/style.css">
 </head>
 <body>
     <div id="buttonContainer">
-        <div id="qKey">
-            <p>Q key</p>
+        <div id="aKey">
+            <p>A key</p>
         </div>
-        <div id="wKey">
-            <p>W key</p>
+        <div id="sKey">
+            <p>S key</p>
         </div>
-        <div id="eKey">
-            <p>E key</p>
+        <div id="dKey">
+            <p>D key</p>
+        </div>
+        <div id="fKey">
+            <p>F key</p>
+        </div>
+        <div id="gKey">
+            <p>G key</p>
+        </div>
+        <div id="hKey">
+            <p>H key</p>
+        </div>
+        <div id="iKey">
+            <p>I key</p>
+        </div>
+        <div id="jKey">
+            <p>J key</p>
+        </div>
+        <div id="kKey">
+            <p>K key</p>
+        </div>
+        <div id="lKey">
+            <p>L key</p>
+        </div>
         </div>
     </div>
     
