Drum Kit Challenge- based on template v1.3

--- a/index.html
+++ b/index.html
@@ -11,41 +11,45 @@
 <body>
     <div id="buttonContainer">
         <div id="aKey">
-            <p>A key</p>
+            <p>A key<br>BOOM</p>
         </div>
         <div id="sKey">
-            <p>S key</p>
+            <p>S key<br>CLAP</p>
         </div>
         <div id="dKey">
-            <p>D key</p>
+            <p>D key<br>HIHAT</p>
         </div>
         <div id="fKey">
-            <p>F key</p>
+            <p>F key<br>KICK</p>
         </div>
         <div id="gKey">
-            <p>G key</p>
+            <p>G key<br>OPENHAT</p>
         </div>
         <div id="hKey">
-            <p>H key</p>
-        </div>
-        <div id="iKey">
-            <p>I key</p>
+            <p>H key<br>RIDE</p>
         </div>
         <div id="jKey">
-            <p>J key</p>
+            <p>J key<br>SNARE</p>
         </div>
         <div id="kKey">
-            <p>K key</p>
+            <p>K key<br>TINK</p>
         </div>
         <div id="lKey">
-            <p>L key</p>
+            <p>L key<br>TOM</p>
         </div>
         </div>
     </div>
-    
-    <audio id="tom" src="sounds/tom.wav"></audio>
+
+
+    <audio id="boom" src="sounds/boom.wav"></audio>
+    <audio id="clap" src="sounds/clap.wav"></audio>
+    <audio id="hihat" src="sounds/hihat.wav"></audio>
     <audio id="kick" src="sounds/kick.wav"></audio>
+    <audio id="openhat" src="sounds/openhat.wav"></audio>
+    <audio id="ride" src="sounds/ride.wav"></audio>
     <audio id="snare" src="sounds/snare.wav"></audio>
+    <audio id="tink" src="sounds/tink.wav"></audio>
+    <audio id="tom" src="sounds/tom.wav"></audio>
     <script src="script/script.js"></script>
 </body>
 </html>
