Drum Kit Challenge- based on template v1.4

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
         <div id="lKey">
             <p>L key<br>TOM</p>
         </div>
+        <h1>Click or type the keys to play the drums</h1>
+        </div>
+        <div class = "drumKit"><img src="https://media.istockphoto.com/vectors/vector-illustration-of-a-drum-set-in-cartoon-style-isolated-on-white-vector-id958752970?k=20&m=958752970&s=612x612&w=0&h=rPi4VUGUQtaAJEQzw2DC3Gri-qK15Gjferx4VZgwmcM=">
         </div>
     </div>
 
